--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,10 @@ services:
     name: hsa-games
     env: node
     plan: free
-    runtime: node
-    nodeVersion: 16
-    buildCommand: yarn build
+    buildCommand: yarn global add nuxt && yarn install && yarn build
     startCommand: yarn start
-    repo: https://github.com/alexdgbs/hsa-games-u
+    autoDeploy: true
+    envVars:
+      NODE_ENV: production
+      API_URL: https://hsa-games.com
+    nodeVersion: 18.x
